--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,9 @@ input:focus {
 input::placeholder {
   color: #94a3b8;
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
